# xchange

./: .gitignore  README.md
Q_space/: functions.h  in.json  main.cpp
c++/: CMakeLists.txt  Makefile  Readme.txt  calc_eigenstates.cpp  calc_exchange.cpp  calc_hamK.cpp  calc_occupation.cpp  coordination_sort.cpp  cpp_modules.cpp  example.cpp  exchange.hpp  functions.h  main.cpp  occupation.hpp  xchange.cpp  xchange.py
c++/include/: exchange.hpp  occupation.hpp
c++/src/: exchange.cpp  occupation.cpp
c++_inverse/: main.cpp
c++_openmp/: CMakeLists.txt  occupation.hpp  xchange.py
c++_openmp_test/: CMakeLists.txt  cpp_modules.cpp  exchange.hpp  occupation.hpp
c++_openmp_test/python/: in.json
c++_openmp_test/test_eigen/: Makefile  calc_hamK.cpp  calc_occupation.cpp  functions.h  in.json  main.cpp
example/: in.json  xchange.x
examples/BaMoPO/: in.json
examples/square_lattice/: in.json
python/: xchange.py  xchange_selfen.py  xchange_selfen_version.py  xchange_vectorized.py  xchange_vectorized_test.py
src/: Makefile  calc_exchange.cpp  calc_hamK.cpp  calc_occupation.cpp  coordination_sort.cpp  inverse_matrix.cpp  main.cpp
